# misc

./: .gitignore
Benchmarks/: Benchmarks.sln
Benchmarks/Benchmarks/: Caches.cs  Common.cs  Program.cs
MITTENS/: main.go  main.py
a/: lib.asm  makefile  program.asm
advent24/: makefile
advent24/advent/: advent.h  deque.c  deque.h  file.c  hashtable.c  hashtable.h  heap.c  heap.h  types.h  utils.c
advent24/day1/: main.c
advent24/day10/: main.c
advent24/day11/: main.c
advent24/day12/: main.c
advent24/day13/: main.c
advent24/day14/: main.c
advent24/day15/: main.c
advent24/day16/: main.c
advent24/day17/: main.c
advent24/day18/: main.c
advent24/day19/: main.c
advent24/day2/: main.c
advent24/day20/: main.c
advent24/day21/: main.c
advent24/day22/: main.hs
advent24/day23/: main.hs
advent24/day24/: main.hs
advent24/day25/: main.hs
advent24/day3/: main.c
advent24/day4/: main.c
advent24/day5/: main.c
advent24/day6/: main.c
advent24/day7/: main.c
advent24/day8/: main.c
advent24/day9/: main.c
areyou/: areyou.cabal  makefile  run.sh
areyou/app/: Crypto.hs  Main.hs
ben4/: .gitignore  CMakeLists.txt  ben4-original  hist  ints  main.c  makefile
ben4_go/: main  main.go  main4
ben4_hs/: Main.hs
ben4_rust/: Cargo.toml
ben4_rust/src/: config.rs  main.rs  primes.rs
busy/: .gitignore  busy.cabal  makefile
busy/src/: Calc.hs  Codenames.hs  Datamuse.hs  Http.hs  Main.hs  Utils.hs
catproccpuinfogrepmhz/: .gitignore  README.md  main  main.c  makefile
cluehack/: ch_gensim.py  ch_wordnet.py  main.py
ctf/: handy_commands  main.py  pwn107.py
d-h-m/: go.mod  main.go
eia/: .gitignore  README.md  mix.exs
eia/lib/: wip.ex
eia/test/: eia_test.exs
gdb/: inject.gdb  unject.gdb  watch.gdb
github/: main.py
go-warnings/: .gitignore  makefile
go-warnings/include/: util.h
go-warnings/src/: main.c  proc.c  util.c
go-warnings/test/: A.go  B.go  C.go  main.c
goerrs/: main.go
gonum/: go.mod  main.go
h3so/: .gitignore  inject.gdb  main.cxx  run.sh  watch.gdb
h3so/gdb/: unject.gdb
h3so/src/: core.cxx  h3so.hxx  main.cxx  util.cxx
ld_preload/: hack.cxx  main.cxx
ld_preload/32/: hack.cxx  main.cxx  run.sh
ld_preload/64/: hack.cxx  lib.cxx  main.cxx  run.sh
monies/: main.go  main.py
msr/: main  main.c
p2p/: CMakeLists.txt  README.md  cb.c  error.c  handler.c  hashtable.c  listener.c  log.c  main.c  p2p.h  peer.c  run.sh  socket.c  timer.c  utils.c
pgitp/: Makefile  main.go
pipewire-events/: A90-volume.py
pwntools/: main.py  output
py2py/: diagram.py  logs.py  main.py  model.py  output.py  parser.py  server.py  terminal.py  test.py
rugfold/: makefile  rugfold.cabal
rugfold/lib/: Blockchain.hs  Client.hs  Message.hs  Utils.hs
rugfold/src/: Blockchain.hs  Main.hs  Server.hs  Utils.hs
rugfold/test/: Main.hs
scripts/: tailscale-toggle.sh
seaxch/: .gitignore  Makefile  api.py  main.py  requirements.txt  sbert.py  util.py
seaxch/cli/: main.py  util.py
seaxch/tsdr/: Dockerfile  main.py
simplesh/: main.c
ssdead/: Makefile  ssdead.cabal
ssdead/app/: Calc.hs  Main.hs  SMART.hs  Util.hs
stripe-demo/: main.py  reqs.txt
tensorgym/: cifar10.py  clustering.py  easies.py  fmnist.py  hands.py  lora.py  movies-sentiment.py  plots.py  pyrightconfig.json  shaka.py  sraschka.py  test.py  titanic.py
tensorgym/typings/torch/: __init__.pyi  _appdirs.pyi  _classes.pyi  _custom_ops.pyi  _environment.pyi  _guards.pyi  _jit_internal.pyi  _linalg_utils.pyi  _lobpcg.pyi  _lowrank.pyi  _meta_registrations.pyi  _namedtensor_internals.pyi  _opaque_base.pyi  _ops.pyi  _python_dispatcher.pyi  _sources.pyi  _storage_docs.pyi  _tensor.pyi  _tensor_str.pyi  _torch_docs.pyi  _utils.pyi  _utils_internal.pyi  _vmap_internals.pyi  _weights_only_unpickler.pyi  functional.pyi  hub.pyi  library.pyi  overrides.pyi  quasirandom.pyi  return_types.pyi  serialization.pyi  storage.pyi  types.pyi  version.pyi
tensorgym/typings/torch/_C/: _VariableFunctions.pyi  __init__.pyi  _autograd.pyi  _distributed.pyi  _distributed_c10d.pyi  _functionalization.pyi  _functorch.pyi  _monitor.pyi  _nn.pyi  _profiler.pyi
tensorgym/typings/torch/_custom_op/: autograd.pyi  impl.pyi
tensorgym/typings/torch/_decomp/: __init__.pyi  decompositions.pyi  decompositions_for_jvp.pyi  decompositions_for_rng.pyi
tensorgym/typings/torch/_dispatch/: python.pyi
tensorgym/typings/torch/_dynamo/: __init__.pyi  _trace_wrapped_higher_order_op.pyi  aot_compile.pyi  aot_compile_types.pyi  bytecode_analysis.pyi  bytecode_transformation.pyi  cache_size.pyi  callback.pyi  codegen.pyi  compiled_autograd.pyi  comptime.pyi  config.pyi  convert_frame.pyi  dce_extra_outputs.pyi  debug_utils.pyi  decorators.pyi  device_interface.pyi  dynamo_profiler.pyi  eval_frame.pyi  exc.pyi  external_utils.pyi  functional_export.pyi  graph_break_hints.pyi  graph_bytecode_inputs.pyi  graph_id_filter.pyi  graph_region_tracker.pyi  guards.pyi  hooks.pyi  logging.pyi  metrics_context.pyi  output_graph.pyi  package.pyi  pgo.pyi  precompile_context.pyi  replay_record.pyi  resume_execution.pyi  side_effects.pyi  source.pyi  symbolic_convert.pyi  testing.pyi  (+3 more)
tensorgym/typings/torch/_export/: __init__.pyi  config.pyi  utils.pyi  (+3 more)
tensorgym/typings/umap/: __init__.pyi  aligned_umap.pyi  distances.pyi  layouts.pyi  parametric_umap.pyi  plot.pyi  sparse.pyi  spectral.pyi  umap_.pyi  utils.pyi  validation.pyi
tmp_cpp/: CMakeLists.txt  main.cpp
tmp_go/: go.mod  main  main.go  makefile
virtual_mouse/: main.c
xax/: CMakeLists.txt  run.sh
xax-train/: CMakeLists.txt  main.c
xax/include/: args.h  hashtable.h  impl.h  proc.h  scan.h  types.h  util.h
xax/src/: args.c  hashtable.c  main.c  proc.c  scan.c  util.c
xax/src/cli/: mem.h  mem_ptr_scan.c  mem_sampler.c
xax/src/csrh/: csrh.c  csrh.h  ctl_scan.c  history.c  threads.c
xax/src/h3sod/: h3sod.c
xax/src/impl/: cli.c  cli32.c  cli64.c  csrh.c  h3sod.c  mem.h  mem_analysis.c  mem_sampler.c  memdump.c  rh.c  sample.c  train.c
xax/src/impl/sample/: sample.c
xax/src/ui/: guess.py  test.py  ui.py
zippers/: Main.hs
(+1005 files in other folders)
