cabal-version:      3.0
name:               areyou
version:            0.1.0.0
author:             ivfiev
build-type:         Simple

common warnings
    ghc-options: -Wall

executable areyou
    import:           warnings
    main-is:          Main.hs
    --other-modules:    Entry
    -- other-extensions: RecordWildCards
    default-extensions: OverloadedStrings, RecordWildCards, DeriveAnyClass
    build-depends:    base ^>=4.17.2.1, scotty, aeson, text, crypton, containers, wai, http-types, bytestring, time
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N