cabal-version:      3.0
name:               rugfold
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library rugfold-lib
    hs-source-dirs:      lib
    exposed-modules:     Blockchain, Message, Utils
    default-extensions:  OverloadedStrings, RecordWildCards, DeriveAnyClass
    build-depends:       base ^>=4.17.2.1, crypton, bytestring, aeson, memory, network, text
    default-language:    GHC2021
    ghc-options:         -O2 -threaded

executable rugfold
    import:             warnings
    main-is:            Main.hs
    other-modules:      Server
    default-extensions: OverloadedStrings, RecordWildCards, DeriveAnyClass
    build-depends:      base ^>=4.17.2.1, rugfold-lib, crypton, bytestring, aeson, memory, network
    hs-source-dirs:     src
    default-language:   GHC2021
    ghc-options:        -O2 -threaded

executable rugfold-test
    import:             warnings
    main-is:            Main.hs
    default-extensions: OverloadedStrings, RecordWildCards, DeriveAnyClass
    build-depends:      base ^>=4.17.2.1, rugfold-lib, bytestring, aeson, network, process
    hs-source-dirs:     test
    default-language:   GHC2021
    ghc-options:        -O2 -threaded
